--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "grunt-concurrent": "^2.0.3",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-jade": "^0.15.0",
+    "grunt-contrib-stylus": "^0.22.0",
     "grunt-nodemon": "^0.4.0",
     "http-server": "^0.8.0",
     "load-grunt-tasks": "^3.2.0"
