--- a/front/package.json
+++ b/front/package.json
@@ -11,10 +11,14 @@
   "devDependencies": {
     "express": "^4.13.3",
     "grunt": "^0.4.5",
+    "grunt-bower-concat": "^0.5.0",
     "grunt-concurrent": "^2.0.3",
     "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-jade": "^0.15.0",
+    "grunt-contrib-jshint": "^0.11.3",
     "grunt-contrib-stylus": "^0.22.0",
+    "grunt-contrib-watch": "^0.6.1",
     "grunt-nodemon": "^0.4.0",
     "http-server": "^0.8.0",
     "load-grunt-tasks": "^3.2.0"
