--- a/front/bower.json
+++ b/front/bower.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "angular": "~1.4.5",
     "angular-ui-router": "~0.2.15",
-    "angular-google-maps": "~2.2.0"
+    "angular-google-maps": "~2.2.0",
+    "ngstorage": "~0.3.9"
   }
 }
