--- a/front/bower.json
+++ b/front/bower.json
@@ -17,6 +17,7 @@
     "angular": "~1.4.5",
     "angular-ui-router": "~0.2.15",
     "angular-google-maps": "~2.2.0",
-    "ngstorage": "~0.3.9"
+    "ngstorage": "~0.3.9",
+    "angular-loading-bar": "~0.8.0"
   }
 }
