implemented cache functionality

--- a/back/lumen/.env.example
+++ b/back/lumen/.env.example
@@ -1,6 +1,9 @@
+TWEETS_CACHE_LIFETIME_MINUTES = 60
+TWEETS_SEARCH_RADIUS_KM = 50
+
 APP_ENV=local
 APP_DEBUG=true
-APP_KEY=SomeRandomKey!!!
+APP_KEY=SomeRandomStringSomeRandomString
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
